<resources>
    <string name="app_name">Diary</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="january_2024">January 2024</string>
    <string name="dayOfWeek">Monday</string>
    <string name="date">Дата:</string>
    <string name="timeStart">Время начала:</string>
    <string name="timeEnd">Время окончания:</string>
    <string name="description">Описание:</string>
    <string name="new_event">New Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="dateofnewevent">Date</string>
    <string name="timeofnewevent">Time</string>
    <string name="event_name">Event name</string>
    <string name="event_description">Description</string>
    <string name="save">Save</string>
</resources>